# Takuzu

./: CMakeLists.txt  README.md  game.c  game.h  game_aux.c  game_ext.c  game_ext.h  game_solve.c  game_struct.h  game_test_jolandry.c  game_test_rwach.c  game_test_zsaidalichei.c  game_text.c  game_tools.c  game_tools.h  queue.c  queue.h
sdl2/: 4x4_default.txt  4x4_isWrapping.txt  6x6_default.txt  6x6_isWrapping.txt  CMakeLists.txt  README.md  demo.c  game_sdl.c  model.c  model.h
web/: Makefile  demo.js  game.css  game.html  wrapper.c
web/src/: game_test_jolandry.c  game_test_rwach.c  game_test_zsaidalichei.c  game_text.c
